# libft_new

./: CMakeLists.txt  library.c  library.h
includes/: logger.h
sources/data_structures/: data_structures.h
sources/data_structures/list/: list.h
sources/logger/: logger_file.c  logger_internal.h  logger_out.c
sources/memory_manager/: memory_manager_internal.h
sources/time/: time_get.c  time_internal.h  time_utils.c
